--- a/templates/module/helfi-news-item/views-view-unformatted--news-archive.html.twig
+++ b/templates/module/helfi-news-item/views-view-unformatted--news-archive.html.twig
@@ -1,3 +1,4 @@
+<h2 class="news-archive__heading">{{ 'All news items'|t({}, {'context': 'News archive heading'}) }}</h2>
 <ul class="news-listing news-listing--teasers">
   {% for row in rows %}
     <li class="news-listing__item">
