UHF-5940: Added wrapper to news item sidebar listings to generate margin between the lists.

--- a/src/scss/06_components/pages/_news-page.scss
+++ b/src/scss/06_components/pages/_news-page.scss
@@ -285,6 +285,10 @@ $-card-teaser-min-width: 280px;
   }
 }
 
+.news-listing--sidebar {
+  margin-bottom: $spacing-quadruple;
+}
+
 .news-archive__heading {
   @include font('h3');
   border-bottom: 2px solid $color-black;
