--- a/templates/module/helfi-news-item/block--views-block--news-latest-news.html.twig
+++ b/templates/module/helfi-news-item/block--views-block--news-latest-news.html.twig
@@ -29,6 +29,7 @@
   <h2{{ title_attributes.addClass('sidebar_block_heading') }}>{{ label }}</h2>
 {% endif %}
 {% block content %}
-  {{ content }}
+  <div class="news-listing--sidebar">
+    {{ content }}
+  </div>
 {% endblock %}
-
