UHF-5699: Remove max-height on images after breakpoint-l

--- a/src/scss/06_components/paragraphs/_event-list.scss
+++ b/src/scss/06_components/paragraphs/_event-list.scss
@@ -63,6 +63,7 @@ $tag-vertical-padding: 5px;
 
   @include breakpoint($breakpoint-l) {
     height: 100%;
+    max-height: unset;
     position: absolute;
   }
 }
