--- a/templates/paragraphs/paragraph--remote-video.html.twig
+++ b/templates/paragraphs/paragraph--remote-video.html.twig
@@ -14,32 +14,13 @@
   {% set header_class = 'component--no-header' %}
 {% endif %}
 
-{% set video_title_level = 'h2' %}
-{% if paragraph_title|render %}
-  {% set video_title_level = 'h3' %}
-{% endif %}
-
 {% block paragraph %}
-  {% embed "@hdbt/misc/component.twig" with
-    {
-      component_title: paragraph_title,
-      component_description: paragraph_desc,
-      component_classes: [
-        header_class,
-        'component--remote-video'
-      ],
-      component_content_class: 'remote-video',
-    }
-  %}
-    {% block component_content %}
-      <div class="remote-video__video">
-        {{ video }}
-      </div>
-      {% if video_title|render %}
-        <{{ video_title_level }} class="remote-video__video-title">{{ video_title }}</{{ video_title_level }}>
-      {% endif %}
-      <div class="remote-video__video-desc">{{ video_desc }}</div>
-    {% endblock component_content %}
-  {% endembed %}
+  {% include '@hdbt/component/remote-video.twig' with {
+    paragraph_title: paragraph_title,
+    paragraph_desc: paragraph_desc,
+    video: video,
+    video_title: video_title,
+    video_desc: video_desc
+  }%}
 {% endblock paragraph %}
 
