--- a/templates/misc/tag.twig
+++ b/templates/misc/tag.twig
@@ -1,1 +1,1 @@
-<li class="content-tags__tags__tag">{{ tag }}</li>
+<li class="content-tags__tags__tag content-tags__tags__tag--{{ size }}">{{ tag }}</li>
