UHF-5988: Changed tpr unit swedish tag to use the new one

--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -9,9 +9,13 @@
 
 {% set supports_swedish %}
   {% if 'sv' in provided_languages %}
-    <div class="unit__supports_language_sv">
-      {{ 'Service in Swedish'|t({}, {'context': 'TPR unit also offers service in Swedish'}) }}
-    </div>
+    {% set tag_content %}
+        <span>{{ 'Service in Swedish'|t({}, {'context': 'TPR unit also offers service in Swedish'}) }}</span>
+      {% endset %}
+    {% include '@hdbt/misc/tag.twig' with {
+      tag: tag_content,
+      size: 'small'
+    }%}
   {% endif %}
 {% endset %}
 
