--- a/src/scss/06_components/pages/_unit.scss
+++ b/src/scss/06_components/pages/_unit.scss
@@ -201,22 +201,11 @@
   }
 }
 
-.unit__supports_language_sv {
-  @include font('special.helper_text');
-  background-color: $color-summer;
-  border-radius: $spacing;
-  display: inline-block;
-  padding-bottom: $spacing-quarter;
-  padding-left: $spacing;
-  padding-right: $spacing;
-  padding-top: $spacing-quarter;
+.unit--full .content-tags__tags__tag {
+  margin-bottom: $spacing-and-half;
 
-  .unit--full & {
-    margin-bottom: $spacing-and-half;
-
-    @include breakpoint($breakpoint-m) {
-      margin-bottom: $spacing-double;
-    }
+  @include breakpoint($breakpoint-m) {
+    margin-bottom: $spacing-double;
   }
 }
 
