UHF-5844: Style the phasing paragraph

--- a/src/scss/06_components/paragraphs/__index.scss
+++ b/src/scss/06_components/paragraphs/__index.scss
@@ -13,6 +13,7 @@
 @import 'list-of-links';
 @import 'map';
 @import 'news-list';
+@import 'phasing';
 @import 'popular-service-item';
 @import 'popular-services';
 @import 'remote-video';
