--- a/templates/block/block--mobile-navigation.html.twig
+++ b/templates/block/block--mobile-navigation.html.twig
@@ -51,7 +51,7 @@
     {{ content }}
   {% endblock %}
 
-  <div class="cssmenu-menu__footer">
+  {# <div class="cssmenu-menu__footer">
     {% set link_attributes = {
       'class': [
         'menu__link',
@@ -60,5 +60,5 @@
     {{ link('City of Helsinki'|t, 'https://hel.fi', link_attributes) }}
     {% set inside_cssmenu = true %}
     {{ drupal_entity('block', 'headertopnavigation')}}
-  </div>
+  </div> #}
 </nav>
