--- a/templates/navigation/menu--mobile.html.twig
+++ b/templates/navigation/menu--mobile.html.twig
@@ -24,7 +24,10 @@
   We call a macro which calls itself to render the full tree.
   @see https://twig.symfony.com/doc/1.x/tags/macro.html
 #}
-{{ menus.menu_links(items, attributes, 0) }}
+<div id="jsmenu" class="jsmenu">
+</div>
+{# {{ menus.menu_links(items, attributes, 0) }} #}
+
 
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
