UHF-5869: UHF-5869: Disable flex-shrink from icons by default

--- a/src/scss/02_mixins/_mixins.scss
+++ b/src/scss/02_mixins/_mixins.scss
@@ -46,6 +46,7 @@
   background-size: contain;
   content: '';
   display: $display;
+  flex-shrink: 0;
   height: $size;
   mask-image: icon_url($icon);
   mask-position: center;
