UHF-5988: Change focus styles to use outline-offset and set the size class to wrapping ul

--- a/src/scss/06_components/__index.scss
+++ b/src/scss/06_components/__index.scss
@@ -9,5 +9,6 @@
 @import 'eu-cookie-compliance-banner';
 @import 'gin-toolbar';
 @import 'logo';
+@import 'tags';
 @import 'throbber';
 @import 'editorially';
