--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -12,10 +12,13 @@
     {% set tag_content %}
         <span>{{ 'Service in Swedish'|t({}, {'context': 'TPR unit also offers service in Swedish'}) }}</span>
       {% endset %}
-    {% include '@hdbt/misc/tag.twig' with {
-      tag: tag_content,
-      size: 'small'
-    }%}
+    {% embed '@hdbt/misc/tag-list.twig'%}
+      {% block content %}
+        {% include '@hdbt/misc/tag.twig' with {
+          tag: tag_content
+        }%}
+        {% endblock content %}
+      {% endembed %}
   {% endif %}
 {% endset %}
 
