UHF-5988: Change small and large to static and interactive

--- a/src/scss/06_components/_tags.scss
+++ b/src/scss/06_components/_tags.scss
@@ -5,23 +5,15 @@ $tag-gap: $spacing-half;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-bottom: 0;
+  margin-bottom: $spacing-and-half;
   margin-top: 0;
   padding-bottom: ($spacing-and-half - $tag-gap);
   padding-left: 0;
   padding-top: $spacing-and-half;
-}
 
-.content-tags__tags--large a,
-.content-tags__tags--large span {
-  border-radius: $spacing-and-half;
-  padding: $spacing 20px;
-}
-
-.content-tags__tags--small a,
-.content-tags__tags--small span {
-  border-radius: $spacing;
-  padding: $spacing-half $spacing;
+  @include breakpoint($breakpoint-m) {
+    margin-bottom: $spacing-double;
+  }
 }
 
 .content-tags__tags__tag {
@@ -32,23 +24,34 @@ $tag-gap: $spacing-half;
   a,
   span {
     @include font('small');
-    background-color: $color-silver;
-    border: 2px solid transparent;
     display: inline-block;
     line-height: 12px;
-    position: relative;
     text-decoration: none;
     transition: 0.2s ease-in-out all;
   }
+}
 
-  a:hover {
-    background-color: transparent;
+.content-tags__tags--interactive a {
+  background-color: transparent;
+  border: 2px solid $color-black;
+  border-radius: $spacing-and-half;
+  padding: $spacing 20px;
+
+  &:hover {
+    background-color: $color-black;
     border-color: $color-black;
+    color: $color-white;
   }
 
-  a:focus {
+  &:focus {
     border-color: $color-black;
     outline: 2px solid $color-black;
     outline-offset: 2px;
   }
+}
+
+.content-tags__tags--static span {
+  background-color: $color-silver;
+  border-radius: $spacing;
+  padding: $spacing-half $spacing;
 }
